# FlowFizzy

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Documentation.md  README.md  doc_archived_8920934313.md  lcd_display_explanation.md  rewrite_commits.ps1  test_file.py
docs/: A1_checklist.md  SpeakDojo_Engineering_Standards.md  architecture.md  decisions.md  hardware_specs.md  issues.md  journal.md  product.md  project_checklist.md
docs/designs/: apds9960_bracket.scad  aquaflow_dispenser_shell.scad
include/: IFlowMeter.h  IHardwareDevice.h  IProximitySensor.h  IPump.h  PinConfig.h
src/: main.cpp
src/app/: AquaFlowApp.cpp  AquaFlowApp.h
src/hardware/: FlowMeter.cpp  FlowMeter.h  GestureSensor.cpp  GestureSensor.h  LcdDisplay.cpp  LcdDisplay.h  PumpController.cpp  PumpController.h  UltrasonicSensor.cpp  UltrasonicSensor.h  WaterPump_bn.cpp
src/monitor/: Monitor.cpp  Monitor.h  gpio_ultrasonic.py  i2c_ultrasonic.py
src/state/: FillingController.cpp  FillingController.h
src/utils/: Logger.h  Timer.cpp  Timer.h
tests/: CMakeLists.txt  FillingControllerTest.cpp  FlowMeterTest.cpp  FlowSensorTest.cpp  HardwareTrioTest.cpp  LcdHelloWorld.cpp  LcdIntegrationTest.cpp  LiskovSubstitutionStressTest.cpp  PumpControllerTest.cpp  PumpIntegrationTest.cpp  TimerTest.cpp  calibrate.cpp  flow_meter_standalone.cpp  gesture_direct_test.py
tests/mock_include/: gpiod.hpp  lgpio.h
